--- a/projeto_md2/estilo.css
+++ b/projeto_md2/estilo.css
@@ -3,3 +3,26 @@
         float: none; /* Added */
         margin-bottom: 10px; /* Added */
 }
+.bmi {         /*my additional class name -for card*/
+    margin-left: 18%;      
+    margin-right: 18%;
+    width: auto;
+}
+body {
+    padding: 0;
+    margin: 0;
+    overflow-y: scroll;
+    font-family: arial;
+    font-size: 18px;
+  }
+  .carousel .item {
+    width: 100%;
+    /*slider width */
+  }
+  .carousel .item img {
+    width: 10%;
+    /*img width*/
+  }
+  .container {
+    width: 100%;
+  }
